http/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
  labels:
    name: httpserver-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: httpserver
  type: ClusterIP
